usfm_parser/tests/snapshots/recovery__attribute_value_not_quoted.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\w word|lemma=grace\\w*"
snapshot_kind: text
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..43
  VerseStart 1@16..20
  Char w@21..43 lemma="grace"
    Text "word"@24..28
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[attribute-value-not-quoted] @35..40: attribute value must be in double quotes
