usfm_parser/tests/snapshots/recovery__character_style_implicitly_closed.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\em a \\iqt b\\iqt* c"
snapshot_kind: text
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..40
  VerseStart 1@16..20
  Char em@21..27
    Text "a "@25..27
  Char iqt@27..38
    Text "b"@32..33
  Text " c"@38..40
  VerseEnd 1
ChapterEnd 1
--- diagnostics
info[character-style-implicitly-closed] @21..24: `\em` was implicitly closed by `\iqt`
