usfm_parser/tests/snapshots/recovery__character_style_not_closed.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a \\em b\n\\p \\v 2 c"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..29
  VerseStart 1@16..20
  Text "a "@21..23
  Char em@23..29
    Text "b"@27..29
  VerseEnd 1
Para p@29..38
  VerseStart 2@32..36
  Text "c"@37..38
  VerseEnd 2
ChapterEnd 1
--- diagnostics
warning[character-style-not-closed] @23..26: `\em` was still open at `\p`
