usfm_parser/tests/snapshots/recovery__empty_book.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN Genesis\n"
---
Book GEN "Genesis" @0..15
--- diagnostics
error[empty-book] @16..16: book contains only an `\id` line
